McStas-2.5_CPU_MPICC/Test_Pol_Mirror/compile_stdout.txt
[1574207523.683583] [n-62-23-6:13929:0]         sys.c:744  MXM  WARN  Conflicting CPU frequencies detected, using: 3370.63
[1574207523.684882] [n-62-23-6:13929:0]      ib_dev.c:533  MXM  WARN  failed call to ibv_exp_use_priv_env(): Function not implemented
[1574207523.684886] [n-62-23-6:13929:0]      ib_dev.c:544  MXM  ERROR ibv_query_device() returned 38: Function not implemented
[1574207523.686694] [n-62-23-6:13929:0]      ib_dev.c:533  MXM  WARN  failed call to ibv_exp_use_priv_env(): Function not implemented
[1574207523.686697] [n-62-23-6:13929:0]      ib_dev.c:544  MXM  ERROR ibv_query_device() returned 38: Function not implemented
begin instrument: Test_Pol_Mirror
  Creator: McStas 2.5 - Nov. 19, 2019
  Source: /zhome/89/0/38697/TESTS/2019-11-20/McStas-2.5_CPU_MPICC/Test_Pol_Mirror/Test_Pol_Mirror.instr
  Parameters:  mirrorOption(int)
  Trace_enabled: yes
  Default_main: yes
  Embedded_runtime: yes
end instrument
begin simulation: .
  Format: McStas
  URL: http://www.mccode.org
  Creator: McStas 2.5 - Nov. 19, 2019
  Instrument: /zhome/89/0/38697/TESTS/2019-11-20/McStas-2.5_CPU_MPICC/Test_Pol_Mirror/Test_Pol_Mirror.instr
  Ncount: 1000000
  Trace: no
  Gravitation: no
  Seed: 1574221452
  Directory: .
  Param: mirrorOption=1
end simulation
info!
INFO: No output directory specified (--dir)
INFO: Using directory: "Test_Pol_Mirror_20191120_005200"
INFO: Regenerating c-file: Test_Pol_Mirror.c
Warning: Using DEFINITION parameter of component Pol_mirror() (potential syntax error) at line /zhome/89/0/38697/TESTS/2019-11-20/McStas-2.5_CPU_MPICC/Test_Pol_Mirror/Test_Pol_Mirror.instr:61
  rUpPar={ 1.0 , 0.0219 , 6.07 , 2.0 , 0.003 }
Warning: Using DEFINITION parameter of component Pol_mirror() (potential syntax error) at line /zhome/89/0/38697/TESTS/2019-11-20/McStas-2.5_CPU_MPICC/Test_Pol_Mirror/Test_Pol_Mirror.instr:61
  rDownPar={ 0.1 , 0.0219 , 6.07 , 2.0 , 0.003 }
CFLAGS=
INFO: Recompiling: ./Test_Pol_Mirror.out
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../optics/Pol_mirror.comp:117:19: warning: ISO C99 requires whitespace after the macro name
   if ((zwidth<=0) || (yheight <= 0)) {
                   ^
INFO: ===
--------------------------------------------------------------------------
Initialization of MXM library failed.

  Error: Input/output error

--------------------------------------------------------------------------
